# futurae_assignment

./: .gitignore  README.md  app.py  main.py  pyproject.toml  run_pipeline.py  task.md
data/: HomeAssignmentEvents.jsonl
data/output/: events-00000-of-00001.parquet  events_invalid-00000-of-00001.parquet  events_valid-00000-of-00001.parquet  metrics-00000-of-00001.parquet
futurae_assignment/: config.py  db.py  exceptions.py  logging.py  models.py
futurae_assignment/api/: models.py
futurae_assignment/api/routers/: events.py  metrics.py
futurae_assignment/pipeline/: aggregator.py  deduper.py  event_aggregator.py  event_deduper.py  event_loader.py  event_parser.py  parser.py  pipeline.py  reader.py  table_creator.py  writer.py
routers/: events.py
sql/ddl/: events.sql  events_invalid.sql  events_valid.sql  metrics.sql
sql/dml/: aggregate_metrics.sql  deduplicate_events.sql
tests/: test_models.py
tests/api/: conftest.py  test_events_router.py  test_metrics_router.py
tests/db/: test_client.py
tests/pipeline/: test_aggregator.py  test_parser.py
